      re-use a delta even if it wasn't against the left-parent, this
      could only happen if ``bzr reconcile`` decided that the parent
      ordering was incorrect in the file graph.  (John Arbash Meinel)

    * The index logic is now able to reload the list of pack files if and
      index ends up disappearing. We still don't reload if the pack data
      itself goes missing after checking the index.
      (John Arbash Meinel, #153786)

  DOCUMENTATION:

  API CHANGES:

    * commands.plugins_cmds is now a CommandRegistry, not a dict.

  TESTING:

  INTERNALS:

     * New AuthenticationConfig.set_credentials method allows easy programmatic
       configuration of authetication credentials.

  PORTABILITY:


bzr 1.8 2008-10-16
------------------

Bazaar 1.8 includes several fixes that improve working tree performance,
display of revision logs, and merges.  The bzr testsuite now passes on OS
X and Python 2.6, and almost completely passes on Windows.  The
smartserver code has gained several bug fixes and performance
improvements, and can now run server-side hooks within an http server.

  BUG FIXES:

   * Fix "Must end write group" error when another error occurs during
     ``bzr push``.  (Andrew Bennetts, #230902)

  PORTABILITY:

   * Some Pyrex versions require the WIN32 macro defined to compile on
     that platform.  (Alexander Belchenko, Martin Pool, #277481)


bzr 1.8rc1 2008-10-07
---------------------

  CHANGES:

    * ``bzr log file`` has been changed. It now uses a different method
      for determining which revisions to show as merging the changes to
      the file. It now only shows revisions which merged the change
      towards your mainline. This simplifies the output, makes it faster,
      and reduces memory consumption.  (John Arbash Meinel)

    * ``bzr merge`` now defaults to having ``--reprocess`` set, whenever
      ``--show-base`` is not supplied.  (John Arbash Meinel)
